--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,23 @@
-# Ignore Python cache and compiled files
+# Ignore Python cache files
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 
-# Ignore virtual environment
-venv/
+# Ignore environment files
 .env
+.venv/
+venv/
 
 # Ignore system files
 .DS_Store
-*.swp
-*.swo
+Thumbs.db
 
-# Ignore logs and temporary files
-logs/
-*.log
+
+# Ignore IDE/editor configurations
+.vscode/
+.idea/
+
+# Ignore static and media files (optional, if using volume mounts instead)
+staticfiles/
+media/
