--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -24,14 +24,22 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-    #   - name: Run tests
-    #     run: |
-    #       pytest tester.py
+      # - name: Run tests
+      #   run: |
+      #     pytest tester.py
 
   build:
     runs-on: ubuntu-latest
@@ -45,9 +53,13 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD_project }}
+          password: ${{ secrets.DOCKER_PASSWORD_project  }}
 
       - name: Build And Push Docker image on Docker Hub
         run: |
-          docker build -t mustafa3li/project:v1 .
-          docker push mustafa3li/project:v1
+          export DOCKER_BUILDKIT=1
+          IMAGE_TAG=${{ github.sha }}
+
+          docker build -t mustafa3li/project:latest -t mustafa3li/project:$IMAGE_TAG .
+          docker push mustafa3li/project:latest
+          docker push mustafa3li/project:$IMAGE_TAG
