--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -6,7 +6,6 @@ on:
       - main
     tags:
       - "*"
-
   pull_request:
     branches:
       - main
@@ -14,7 +13,6 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,14 +35,50 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Run unit tests (optional, uncomment if needed)
       # - name: Run tests
       #   run: |
       #     pytest tester.py
 
-  build:
+  docker-compose-tests:
     runs-on: ubuntu-latest
     needs: tests
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: Set up Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker.io docker-compose
+
+      - name: Build and start Docker Compose services
+        run: |
+          docker compose up -d --build
+
+      - name: Wait for MySQL to be ready
+        run: |
+          echo "Waiting for MySQL to initialize..."
+          until docker exec $(docker ps -qf "name=mysql_db") mysqladmin ping -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} --silent; do
+            sleep 3
+          done
+          echo "MySQL is ready!"
+
+      - name: Run Django migrations
+        run: |
+          docker compose exec web python manage.py migrate
+
+      - name: Run Django tests
+        run: |
+          docker compose exec web python manage.py test
+
+      - name: Stop Docker Compose services
+        run: |
+          docker-compose down
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [tests, docker-compose-tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -53,22 +87,20 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD_project  }}
+          password: ${{ secrets.DOCKER_PASSWORD_project }}
 
       - name: Get latest version from Docker Hub and increment it
         run: |
           latest_version=$(curl -s https://hub.docker.com/v2/repositories/mustafa3li/project/tags | jq -r '.results[].name' | grep -E '^version_[0-9]+$' | sort -V | tail -n1)
-
           if [[ -z "$latest_version" ]]; then
             new_version="version_1"
           else
             new_version="version_$(( ${latest_version#version_} + 1 ))"
           fi
-
           echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
           echo "Building Docker image with tag: $new_version"
 
-      - name: Build And Push Docker image on Docker Hub
+      - name: Build and Push Docker image on Docker Hub
         run: |
           docker build -t mustafa3li/project:${{ env.NEW_VERSION }} .
           docker push mustafa3li/project:${{ env.NEW_VERSION }}
