--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,13 +14,13 @@ services:
       - mysql_data:/var/lib/mysql
 
   web:
-    build: .
+    image: mustafa3li/backend:v1
     container_name: django_app
     restart: always
     depends_on:
       - db
     environment:
-      DATABASE_HOST: ${DB_HOST}
+      DATABASE_HOST: db
       DATABASE_PORT: ${DB_PORT}
       DATABASE_NAME: ${DB_NAME}
       DATABASE_USER: ${DB_USER}
@@ -30,8 +30,6 @@ services:
       ALLOWED_HOSTS: ${ALLOWED_HOSTS}
     ports:
       - "5000:5000"
-    volumes:
-      - .:/app
     entrypoint: /bin/bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:5000"
 
 volumes:
