--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -11,7 +11,7 @@ on:
       - main
 
 jobs:
-  tests:
+  requirements_tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -42,7 +42,7 @@ jobs:
 
   docker-compose-tests:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: requirements_tests
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -78,7 +78,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [tests, docker-compose-tests]
+    needs: [requirements_tests, docker-compose-tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -87,7 +87,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD_project }}
+          password: ${{ secrets.DOCKER_PASSWORD_PROJECT }}
 
       - name: Get latest version from Docker Hub and increment it
         run: |
