--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -11,7 +11,7 @@ on:
       - main
 
 jobs:
-  requirements_tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -35,42 +35,50 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run unit tests (optional, uncomment if needed)
-      # - name: Run tests
-      #   run: |
-      #     pytest tester.py
-
   docker-compose-tests:
     runs-on: ubuntu-latest
-    needs: requirements_tests
+    needs: tests
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Docker
         run: |
+          # Remove any conflicting containerd packages
+          sudo apt-get remove -y containerd.io containerd runc || true
+
+          # Install Docker using the official convenience script
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sudo sh get-docker.sh
+
+          # Install Docker Compose
           sudo apt-get update
-          sudo apt-get install -y docker.io docker-compose
+          sudo apt-get install -y docker-compose
 
       - name: Build and start Docker Compose services
         run: |
-          docker compose up -d --build
+          echo "DB_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}" >> .env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+          echo "DB_PORT=3306" >> .env
+          docker-compose up -d --build
 
       - name: Wait for MySQL to be ready
         run: |
           echo "Waiting for MySQL to initialize..."
           until docker exec $(docker ps -qf "name=mysql_db") mysqladmin ping -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} --silent; do
-            sleep 3
+            sleep 5
           done
           echo "MySQL is ready!"
 
       - name: Run Django migrations
         run: |
-          docker compose exec web python manage.py migrate
+          docker-compose exec web python manage.py migrate
 
       - name: Run Django tests
         run: |
-          docker compose exec web python manage.py test
+          docker-compose exec web python manage.py test
 
       - name: Stop Docker Compose services
         run: |
@@ -78,7 +86,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [requirements_tests, docker-compose-tests]
+    needs: [tests, docker-compose-tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
