--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -11,7 +11,7 @@ on:
       - main
 
 jobs:
-  tests:
+  requirements_tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -37,7 +37,7 @@ jobs:
 
   docker-compose-tests:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: requirements_tests
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -74,11 +74,11 @@ jobs:
 
       - name: Run Django migrations
         run: |
-          docker-compose exec web python manage.py migrate
+          docker-compose exec -T web python manage.py migrate
 
       - name: Run Django tests
         run: |
-          docker-compose exec web python manage.py test
+          docker-compose exec -T web python manage.py test
 
       - name: Stop Docker Compose services
         run: |
@@ -86,7 +86,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [tests, docker-compose-tests]
+    needs: [requirements_tests, docker-compose-tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
