--- a/Kubernetes/ingress.yaml
+++ b/Kubernetes/ingress.yaml
@@ -7,8 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: taskmanager.example.com
-    http:
+  - host: taskmanager.example.com        ## http://taskmanager.example.com/
+    http:                                ## http://taskmanager.example.com:31281/
       paths:
       - path: /
         pathType: Prefix
@@ -17,3 +17,12 @@ spec:
             name: django
             port:
               number: 8000
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: django
+            port:
+              number: 8000               ## http://192.168.49.2:31281/
