--- a/Kubernetes/django_service.yaml
+++ b/Kubernetes/django_service.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   selector:
     app: django
+  type: NodePort
   ports:
   - port: 8000
     targetPort: 8000
+    nodePort: 30000
