--- a/Kubernetes/ingress.yaml
+++ b/Kubernetes/ingress.yaml
@@ -7,8 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: taskmanager.example.com        ## http://taskmanager.example.com/
-    http:                                ## http://taskmanager.example.com:30000/
+  - host: taskmanager.example.com        ## http://taskmanager.example.com:30000/
+    http:                                ## http://taskmanager.example.com/
       paths:
       - path: /
         pathType: Prefix
